Add 400 bad request to post
