# swagger.yaml
@@ -60,6 +60,10 @@ paths:
           description: "Successfully created the trip"
           schema: 
             $ref: "#/definitions/ApiResponse"
+        "400":
+          description: "Bad Request"
+          schema: 
+            $ref: "#/definitions/ApiResponse"
         "405":
           description: "Invalid input"
           schema: 
